# AlphaBlokus

./: .gitignore  AGENTS.md  CLAUDE.md  PC_SETUP_PROMPT.md  PLAN-FORMAT.md  PROJECT-STATE.md  README.md  STYLE-GUIDE.md  arena.py  coach.py  config.py  eval.ipynb  game.py  logging_config.json  main.py  mcts.py  neuralnet.py  pyproject.toml  reporting.py  todo.txt  utils.py
blokusduo/: game.py  pieces.py
core/: acceptance.py  arena.py  coach.py  config.py  game_factory.py  inference_channel.py  inference_server.py  interfaces.py  mcts.py  metrics.py  parallel_self_play.py  players.py  self_play.py  sparse_policy.py  storage.py  symmetry_diagnostic.py
docs/: 00-PROJECT-OVERVIEW.md  01-ALGORITHMS.md  01-ARCHITECTURE-REVIEW.md  01-BACKGROUND.md  01-STRUCTURAL-REFACTOR.md  02-ALGORITHMS.md  02-BUG-FIXES.md  02-NEURAL-NETWORKS.md  03-EVALUATION-PLAN.md  03-NEURAL-NETWORKS.md  04-BLOKUS-DUO.md  05-EVALUATION.md  05-HANDOFF.md  06-COMPETITIVE-LANDSCAPE.md  06-EXTERNAL-INTERFACES.md  06-INTERFACES.md  06-PREFLIGHT-FIXES.md  07-APPENDIX-PIECES.md  07-DATA-STORAGE.md  07-HANDOFF.md  08-APPENDIX-PIECES.md  08-EXTERNAL-INTERFACES.md  08-HANDOFF.md  08-TRAINING-ESTIMATES.md  09-APPENDIX-PIECES.md  09-COMPUTE-OPTIONS.md  IDEAS.md
games/: base_wrapper.py
notebooks/: eval.ipynb
reporting/: __init__.py  display.py  display_blokusduo.py  display_tictactoe.py  mcts_profiling.py  training.py
run_configurations/: bench_workers_cpu16.json  bench_workers_gpu8.json  bench_workers_server16.json  blokus_3gen.json  blokus_linux16_15.json  blokus_linux_15.json  blokus_mac_test.json  (+20 more)
(+190 files in other folders)
